--- a/Adventure.html
+++ b/Adventure.html
@@ -41,6 +41,7 @@ var moves = [];
 var selectedUnit;
 var moveParams = [];
 var movementHighlights = [];
+var unitMoved = [];
 
 //Variables used for board scrolling (increase board rows &/or cols to test)
 var globalOffsetX = 0;
@@ -52,13 +53,16 @@ var scrollSpeed = 4; //To increase scrolls speed change this (not others)
 //Variables used to track player units and hp
 var playerUnits = [];
 var playerHP = [];
-var unitMoved = [];
 
 //Variables used to track enemy units and hp
 var enemyUnits = [];
 var enemyHP = [];
 var enemyUnitMoved = [];
 var currentEnemy;
+
+//Variables used to call click at a certain location
+var forceClickX = 0;
+var forceClickY = 0;
 
 //Variables used in attack functions
 var attackableSpaces = [];
@@ -344,7 +348,7 @@ function newPlayerUnit (xCord, yCord, unit) { //Creates a new unit for the playe
 	//Visual component
 	playerUnits[playerUnits.length] = new component(50, 50, units[unit].image, toPixel(xCord,globalOffsetX) + ((spaceSize-50)/2), toPixel(yCord,globalOffsetY) + ((spaceSize-50)/2), "player", units[unit]);
 	//Array location keeping track of whether unit has moved
-	unitMoved[playerUnits.length-1] = 0;
+	unitMoved[playerUnits.length-1] = units[unit].movement;
 	//Array location keeping track of unit health
 	playerHP[playerHP.length] = new component("900 20px", "Courier New", "white", toPixel(xCord,globalOffsetX) + 25 + ((64-50)/2), toPixel(yCord,globalOffsetY) + 50 + ((64-50)/2), "text", "10");
 	//Array location keeping track of where this unit is on the board 
@@ -353,7 +357,7 @@ function newPlayerUnit (xCord, yCord, unit) { //Creates a new unit for the playe
 
 function newEnemyUnit (xCord, yCord, unit) { //Same as newPlayerUnit but different arrays for enemy
 	enemyUnits[enemyUnits.length] = new component(50, 50, units[unit].enemyImage, toPixel(xCord,globalOffsetX) + ((spaceSize-50)/2), toPixel(yCord,globalOffsetY) + ((spaceSize-50)/2), "enemy", units[unit]);
-	enemyUnitMoved[enemyUnits.length-1] = 0;
+	enemyUnitMoved[enemyUnits.length-1] = units[unit].movement;
 	enemyHP[enemyHP.length] = new component("900 20px", "Courier New", "white", toPixel(xCord,globalOffsetX) + 25 + ((64-50)/2), toPixel(yCord,globalOffsetY) + 50 + ((64-50)/2), "text", "10");
 	entityLayer[xCord][yCord] = ((enemyUnits.length-1) * -1)-2;
 }
@@ -525,7 +529,7 @@ function updateGameArea() { //Called to draw each new frame on the canvas
 		}
 		else if (turnOver == 2) { //if its phase 2
 			endTurn(); //end the turn (this will turn on turnCard aka the "Day X" graphic)
-			delay = 50; //wait almost a second
+			delay = 30; //wait half a second
 			turnOver = 3; //and then start phase 3
 		}
 		else {
@@ -543,15 +547,14 @@ function updateGameArea() { //Called to draw each new frame on the canvas
 		if (hpToSet[0].text == hpToSet[1]) { //if we've done all the damage we need to do
 			attacking = 0; //stop attacking
 			delay = -2; //everything else doesn't have to wait anymore
-			if (hpToSet[1] == 0) { //if we killed something move onto the space where it was
+			if (hpToSet[1] <= 0) { //if we killed something move onto the space where it was
 				moves = [[toSpace(enemyUnits[hpToSet[2]].x,globalOffsetX),toSpace(enemyUnits[hpToSet[2]].y,globalOffsetY)],[toSpace(playerUnits[selectedUnit].x,globalOffsetX),toSpace(playerUnits[selectedUnit].y,globalOffsetY)]];
-				entityLayer[moves[moves.length-1][0]][moves[moves.length-1][1]] = -1;
+				entityLayer[moves[0][0]][moves[0][1]] = -1;
 				moveParams = [toSpace(playerUnits[selectedUnit].x,globalOffsetX),toSpace(playerUnits[selectedUnit].y,globalOffsetY),playerUnits[selectedUnit],moves.length-1];
 				executeMoves();
 			}
-			unitMoved[selectedUnit] = 1; //after attacking set the unit as having been moved this turn
+			unitMoved[selectedUnit] = 0; //after attacking set the unit as having been moved this turn
 			playerUnits[selectedUnit].image.src = playerUnits[selectedUnit].text.movedImage;
-			refreshUnitMoved();
 			hpToSet = [];
 		}
 	}
@@ -575,7 +578,7 @@ function updateGameArea() { //Called to draw each new frame on the canvas
 }
 
 function handleInput() { //called when a key is pressed
-    if (gameArea.keys[83] && globalOffsetY > boardY - spaceSize*boardCols) { // if w is pressed scroll up
+	if (gameArea.keys[83] && globalOffsetY > boardY - spaceSize*boardCols) { // if w is pressed scroll up
 		globalSpeedY = -1*scrollSpeed;
 		globalOffsetY -= scrollSpeed;
 	}  
@@ -597,7 +600,11 @@ function handleInput() { //called when a key is pressed
 		globalSpeedX = -1*scrollSpeed;
 		globalOffsetX -= scrollSpeed;
 	} 
-	else if (globalSpeedX == -1*scrollSpeed) {globalSpeedX = 0;}	
+	else if (globalSpeedX == -1*scrollSpeed) {globalSpeedX = 0;}
+
+	if ((gameArea.keys[13] || gameArea.keys[32]) && delay < 0) {
+		turnOver = 2;
+	}
 }
 
 function refresh(given) { //runs newPos and update on given
@@ -664,9 +671,20 @@ function defog(i,j) {
 }
 
 function clicked(event) { //called any time the user clicks
-	if (delay < 0 && !capturing){
-		var x = toSpace(event.clientX, globalOffsetX);
-		var y = toSpace(event.clientY, globalOffsetY);
+	if (delay < 0 && !capturing){	
+		if (forceClickX) { //For when we call clicked in a specific location
+			var x = forceClickX
+			forceClickX = 0;
+		}
+		else 
+			var x = toSpace(event.clientX, globalOffsetX);
+		if (forceClickY) {
+			var y = forceClickY;
+			forceClickY = 0;
+		}
+		else 
+			var y = toSpace(event.clientY, globalOffsetY);
+			
 		if (buildingUnit) { //if the building unit window is open
 			if (x < 2 || y < 2 || y > 9 || x > 10){ //user clicks outside the building unit window
 				buildingUnit = false; //close the building unit window
@@ -684,7 +702,7 @@ function clicked(event) { //called any time the user clicks
 				
 				if (gold >= units[toBuild].cost) { //if they have enough money to build the unit
 					newPlayerUnit(factoryX, factoryY, toBuild); //build it
-					unitMoved[unitMoved.length-1] = 1;
+					unitMoved[unitMoved.length-1] = 0;
 					gold -= units[toBuild].cost; //and take the money
 					goldText.text = "Gold: " + gold;
 					buildingUnit = false;
@@ -694,7 +712,7 @@ function clicked(event) { //called any time the user clicks
 		}
 		else if (phase == 0) {
 			movementHighlights = []; //clear off existing movement highlights
-			if (entityLayer[x][y] > -1 && !unitMoved[entityLayer[x][y]]) { //if clicked on a player unit that hasn't moved this turn
+			if (entityLayer[x][y] > -1 && unitMoved[entityLayer[x][y]]) { //if clicked on a player unit that hasn't moved this turn
 				selectedUnit = entityLayer[x][y]; //the unit clicked on becomes the selected unit
 				highlightMoveable(x,y);	//this function will draw the squares that represent where the unit can move
 				terrainCardOn = false; //stop showing the terrain card
@@ -723,6 +741,7 @@ function clicked(event) { //called any time the user clicks
 			}
 			else { //if clicked on terrain
 				movementHighlights[0] = new component(spaceSize, spaceSize, "gold", toPixel(x,globalOffsetX), toPixel(y,globalOffsetY), "square", "none"); //highlight it 
+				unitCardOn = false;
 				terrainCardOn = true; //turn on the terrain card
 				terrainCardMove.text = terrainCost[board[x][y]]; //set each element of the terrain card
 				terrainCardDef.text = terrainDef[board[x][y]];
@@ -733,11 +752,7 @@ function clicked(event) { //called any time the user clicks
 			if (board[x][y] > 6 && entityLayer[x][y] == selectedUnit && !unitMoved[selectedUnit]) { //if its an enemy structure & player clicked on the selected unit & it hasnt moved
 				captureStructure(x,y);
 				playerUnits[selectedUnit].image.src = playerUnits[selectedUnit].stats.movedImage; //set the unit as having been moved
-				unitMoved[selectedUnit] = 1;
-				refreshUnitMoved();
-			}
-			else if (entityLayer[x][y] == selectedUnit && !unitMoved[selectedUnit]) { //if clicked on selected unit and it hasn't moved 
-				alert("code for stand still goes here");
+				unitMoved[selectedUnit] = 0;
 			}
 			clickedReset(); //reset everything when we're done
 		}
@@ -752,6 +767,8 @@ function clicked(event) { //called any time the user clicks
 				makeMoves(temp.x,temp.y,playerUnits[selectedUnit]); //that's the units destination , so map it with makeMoves, and draw the path the unit will take
 				attackCheck = [x,y]; //remeber where the unit being attacked is
 				phase++;
+				if (unitMoved[selectedUnit] == -1) //if the unit has used all its move
+					clicked(event);
 			}
 			else { //if they made a click that isn't attack or move act like its phase 0 because it means they want to do something else
 				clickedReset();
@@ -769,8 +786,12 @@ function clicked(event) { //called any time the user clicks
 				if(structureMap[x][y] < 0) { //if moving onto a structure, capture it
 					captureStructure(x,y);
 				}
-				unitMoved[selectedUnit] = 1; //mark the unit as having moved
-				refreshUnitMoved();
+				unitMoved[selectedUnit] = unitMoved[selectedUnit] - (moves.length-1); //mark the unit as having moved
+				if (unitMoved[selectedUnit] == 0 && checkAttackable(x,y)) { //if the unit has used its moves but can attack
+					unitMoved[selectedUnit] = -1;
+					forceClickX = moves[0][0];
+					forceClickY = moves[0][1];
+				}
 			}
 			else if (spaces[x][y].moveable == 1) { //if clicked on a space the unit can move onto, but not the one pathed to in the last phase, re-do that phase with new destination
 				phase = 1;
@@ -779,9 +800,9 @@ function clicked(event) { //called any time the user clicks
 				clicked(event);
 			}
 			else if (isAttackable(x,y) //if clicked on space that can be attacked 
-					 && moves[0][0] == isAttackable(x,y).destination.x //and the destination matches
-					 && moves[0][1] == isAttackable(x,y).destination.y 
-					 && arrayCompare([x,y],attackCheck)) { //and clicked same space as last time, confirming it
+			&& moves[0][0] == isAttackable(x,y).destination.x //and the destination matches
+			&& moves[0][1] == isAttackable(x,y).destination.y 
+			&& arrayCompare([x,y],attackCheck)) { //and clicked same space as last time, confirming it
 				makeAttack(entityLayer[x][y],selectedUnit); //make the attack 
 				if (parseInt(enemyHP[(entityLayer[x][y]+2)*-1].text) <= 0) { //if the attack killed the unit
 					entityLayer[x][y] = -1; //then there's no longer a unit there
@@ -817,7 +838,7 @@ function highlightMoveable(x, y) {
 }
 
 function getMoveable(givenX,givenY) {
-	var potentialMoveable = {movement: playerUnits[selectedUnit].stats.movement, x: givenX, y: givenY}; //create our starting point, the units location
+	var potentialMoveable = {movement: unitMoved[selectedUnit], x: givenX, y: givenY}; //create our starting point, the units location
 	moveableSpaces = [potentialMoveable]; //make our list of spaces we can move to just our starting point
 	moveableGrid = []; //reset moveableGrid to empty
 	expandMoveable(); //fills moveableSpaces[] with a space object(x cord, y cord, and movement cost to get there) for every square this unit could move to
@@ -831,10 +852,10 @@ function expandMoveable() {
 				currX = moveableSpaces[i].x + spaceOffset[k][0]; //set current space to the one in that  direction
 				currY = moveableSpaces[i].y + spaceOffset[k][1];
 				if (currX >= 0 && currX < board.length && currY >= 0 && currY < board[0].length //if the space being checked is on the board
-					&& moveableSpaces[i].movement - terrainCost[board[currX][currY]] >= 0 //unit has enough movement for terrain cost
-					&& board[currX][currY] != 3 //space is not a river
-					&& entityLayer[currX][currY] > -2 //space is not an enemy
-					&& !(moveableSpaces[i].movement - terrainCost[board[currX][currY]] == 0 && entityLayer[currX][currY] > -1) ){ //if it's not both the last space of the move and the location of an ally (this prevents the move on top of an ally by attacking bug)
+				&& moveableSpaces[i].movement - terrainCost[board[currX][currY]] >= 0 //unit has enough movement for terrain cost
+				&& board[currX][currY] != 3 //space is not a river
+				&& entityLayer[currX][currY] > -2 //space is not an enemy
+				&& !(moveableSpaces[i].movement - terrainCost[board[currX][currY]] == 0 && entityLayer[currX][currY] > -1) ){ //if it's not both the last space of the move and the location of an ally (this prevents the move on top of an ally by attacking bug)
 					newMoveable = {movement: moveableSpaces[i].movement - terrainCost[board[currX][currY]], x: currX, y: currY}; //create a new space object representing this one (movement is how much move the unit will have left if it moves here)
 					moveableSpaces[moveableSpaces.length] = newMoveable; //and add it to our list of moveable spaces
 				}
@@ -876,7 +897,7 @@ function getAttackable() {
 			var currAtk;
 			
 			if (currX >= 0 && currX < board.length && currY >= 0 && currY < board[0].length //if the space is on board
-				&& entityLayer[currX][currY] < -1) { //and there's an enemy there
+			&& entityLayer[currX][currY] < -1) { //and there's an enemy there
 				newAttackable = {destination: moveableSpaces[i], x: currX, y: currY}; //create a new attackable object (destination is the square moved to adjacent to the target being attacked)
 				for (var l = 0; l < attackableSpaces.length; l++) { //for each object in the array of all attackable spaces
 					currAtk = attackableSpaces[l]; //set that one to our current
@@ -892,6 +913,18 @@ function getAttackable() {
 			}
 		}
 	}
+}
+
+function checkAttackable(givenX, givenY) {
+	for (var k = 0; k < spaceOffset.length; k++){ //for each of the four cardinal directions
+		currX = givenX + spaceOffset[k][0]; //set current space to the one in that  direction
+		currY = givenY + spaceOffset[k][1];
+		if (currX >= 0 && currX < board.length && currY >= 0 && currY < board[0].length //if the space being checked is on the board
+		&& entityLayer[currX][currY] < -1) {//space is an enemy
+			return true; //we found a space that can be attacked
+		}
+	}
+	return false;
 }
 
 /*known bugs
@@ -1010,10 +1043,12 @@ function moveActual(x,y,given) { //actually moves the unit's image on the screen
 
 function moveOver() {
 	entityLayer[moves[0][0]][moves[0][1]] = selectedUnit; //update the units position in the entity layer
-	moves = []; //reset everything
-	phase = 0;
 	delay = -2;
-	if (!attacking) //if we don't need to make an attack after this
+	phase = 0;
+	if (forceClickX == moves[0][0] && forceClickY == moves[0][1]) //this is the case where a unit has moved and now will want to attack
+		clicked(event);
+	moves = []; //reset everything
+	if (!unitMoved[selectedUnit]) //if we don't need to make an attack after this
 		playerUnits[selectedUnit].image.src = playerUnits[selectedUnit].stats.movedImage; //make our unit show that its done moving 
 }
 
@@ -1036,27 +1071,11 @@ function makeAttack(tar, atk) {
 	hpToSet = [enemyHP[target], total, target]; //remember what the hp should be set to (the number we just calculated), and which unit's hp will be set
 }
 
-function refreshUnitMoved () {
-	var allMoved = true;
-	for (var i = 0; i < unitMoved.length; i++) { //check if any units have moved
-		if (!unitMoved[i]) {
-			allMoved = false;
-		}
-	}
-	
-	if (allMoved) { //if every unit has moved
-		for (var i = 0; i < unitMoved.length; i++) {
-			unitMoved[i] = 0; //set it so none of them have moved
-		}
-		turnOver = 1; //and also the turn is over 
-	}
-}
-
 function endTurn() {
-	for (var i = 0; i < unitMoved.length; i++) { //change all the unit images back to unmoved 
-		playerUnits[i].image.src = playerUnits[i].stats.image;
+	for (var i = 0; i < unitMoved.length; i++) {
+		unitMoved[i] = playerUnits[i].stats.movement; //set it so none of them have moved
+		playerUnits[i].image.src = playerUnits[i].stats.image; //change all the unit images back to unmoved 
 	}
-	
 	turnCardOn = true; //turn on turn card
 	refreshIncome(); //update income and gold
 	gold += income;
